html/css/style.css
/* ... */
/*.card-header {
    background: url("../images/letter-background.png") 0 0 repeat;    
}

.card-footer {
    background: url("../images/letter-background.png") 0 0 repeat;
}*/

#footnotes li {
    list-style: none;
}

#footnotes li a {
    padding-right: 1em;
}

#footnotes li sup {
    font-size: 18px;
    margin-left: 0;
}

#footnotes {
    padding-left: 0;
    margin-left: 4.5em;
}



.intro_column {
    display: flex;
    vertical-align: middle;
    margin: 0 auto;
    align-items: center;
}

.intro_text {
    padding: 0 15%;
    margin: 0 auto;
}

.intro_img {
    margin: 2em auto;
    padding: .5em;
    vertical-align: middle;
    align-items: center;
    /*background-color: rgba(97, 90, 96, .8);
    border-radius: .45rem;*/
}

#notification {
    background-color:#f6fa29;
    max-height:75px;
    margin-top:0 !important;
    box-shadow:none !important;
    border-radius: 0 !important;
    animation: 1s 1 alternate slidein;
}

.hidden {
    animation: 1s 1 alternate opacity;
    display: inline;
    
}

#close {
    padding: .5em 0;
    font-weight: 600;
}

#close:hover {
    font-weight: 900;
}

@keyframes slidein {
  from {
    max-height: 0;
  }

  to {
    max-height: 75px;
  }
}

@keyframes opacity {
  0% {
    visibility: hidden;
    opacity: 0;
  }

  50% {
    visibility: hidden;
    opacity: .5;
  }
  
  100% {
    visibility: visible;
    opacity: 1;
  }
}

/*.intro_img_sub {
    padding: 1em 0;
    margin: 0 auto;
    background: url('../images/kb0Zm.jpg') 0 0 repeat;
    border-radius: .35rem;
    background-size: contain;
}*/

.index-card .card-header .btn-light:hover {
    background-color: #b59890;
}

.index-card .card-header .btn-light a:hover {
    color: #fff;
}

.index-card .card-header .btn-light {
    background-color:#fff;
}

.intro_img .row {
    align-items: center;
    justify-content: space-evenly;
}

/*.footnote_anchor {
    margin-top: -4em;
    visibility: hidden;
    position: absolute;
}*/

.card-header p {
  font-size: 14px;
}

.tocTable_filter label {
  padding-left: 0.5em;
}

#tocTable td,
th {
  font-size: 14px;
}

div.dataTables_wrapper div.dataTables_filter input {
  display: block !important;
  margin: 0 !important;
}

.capitalize {
  text-transform: capitalize;
}

.fade {
  display: none;
}

.identS {
  margin-left: -5.5em;
  margin-bottom: -2.5em;
}

.identS:hover {
  cursor: pointer;
}

.identS[alt] {
  position: relative;
  /*text-decoration: underline dotted;*/
}

.identS[alt]:hover::after,
.identS[alt]:focus::after {
  content: attr(alt);
  position: absolute;
  bottom: 50px;
  width: auto;
  white-space: nowrap;
  border-radius: 0.25rem;
  font-size: 16px;
  padding: 3px 5px;
  background-color: #f1f1f1;
}

.linenumbers {
  margin: 0 1.5em 0 0;
}

.linenumbersVisible {
  color: #444;
}

.linenumbersTransparent {
  color: transparent;
}

.verseline {
  margin: 0 1.5em 0 0;
}

.numbered > li {
  display: block;
  list-style: none !important;
  padding: 0.3em;
}

.numbered > li::before {
  display: inline-block;
  content: attr(data-no) ". ";
  text-indent: -3em;
}

#show-text {
  cursor: pointer;
}

.about-text-hidden > table > tbody > tr > th,
.about-text-hidden > table > tbody > tr > td {
  border: none;
  padding: 0.5em;
}

.about-text-hidden > table > tbody > tr > th {
  width: 15%;
  max-width: 15%;
  border-right: 1px solid #dedede;
}

.navBarLetters > table > tbody > tr > th,
.navBarLetters > table > tbody > tr > td {
  border: none;
}

.navBarLetters > table > tbody > tr > td {
  padding: 0.2em;
  vertical-align: middle;
}

#wrapper-hero-amp > .row {
  padding-top: 2em;
  /*    background: url("../images/letter-background.png") 0 0 repeat;*/
}

.row {
    margin-left: 0!important;
    margin-right: 0!important;
}

/* Datatables, provided by https://github.com/babslgam */

div.dataTables_wrapper div.dataTables_filter input {
  display: block;
  margin-left: 0;
}

div.dataTables_filter {
  text-align: left !important;
}

.arrow {
  max-width: 18px;
}

.dataTables_wrapper table {
  width: 100%;
}

.dataTables_info {
  text-align: center;
}

.btn-link {
  font-size: 20px;
}

.exportbuttons {
  text-align: right;
}

/* main navigation */

.navbar {
  border-bottom: 5px solid #615a60 !important;
  /*border-bottom: none !important;*/
  background-color: #fff;
}

.navbar .navbar-nav {
  margin-right: 0 !important;
}

.navbar-collapse {
  margin-left: 2em;
}

#navBarLetters {
  margin: 2em auto 2em auto;
  border: 0;
}

.nav-tabs {
  border: 0;
}

.navbar .navbar-collapse .navbar-search {
  border-color: #b59890;
  border-radius: 0.25rem;
}

.navbar .navbar-collapse .navbar-search:hover {
  border-color: #615a60;
}

/**** Font Aweseome ***/
.far {
  font-family: "Font Awesome 5 Free" !important;
}

.img-fluid {
  max-width: 160% !important;
  max-height: 160% !important;
}

.card {
  margin-top: 1em;
  box-shadow: 4px 4px 9px 0 rgba(0, 0, 0, 0.1);
  border-radius: 0.5rem;
  word-wrap: break-word;
  word-break: break-word;
}

.index-card > .card-body {
}

.index-card {
  border-top: 5px solid #615a60;
  /*opacity: .6;*/
  transition: transform 0.2s;
}

.index-card:hover {
  transform: scale(1.02);
}

.index-link:hover {
  text-decoration: none !important;
}

.modal-body table th,
td {
  padding: 0.5em;
}

/* timeline auden biography */

/* js-timeline */

#exampleModalLong {
  background-color: rgba(0, 0, 0, 0.6);
}

.timeline-modal {
  background-color: transparent;
  border: 0;
}

.tei-logo {
  padding-right: 2em;
}

#title-nav {
  border-bottom: 1px dashed #dedede;
}

button.close {
  color: #fff;
}

.timeline-dots button {
  color: #f1f1f1;
}

.timeline-dots li.slide-active button {
  color: #b59890;
}

.timeline-list {
  margin: 0 auto;
  border-radius: 0.5rem;
}

.timeline-dots-wrap.bottom {
  bottom: -60px;
}

.timeline-item {
  background-color: #ddd;
  /*border-radius: .5rem;*/
}

.timeline-horizontal .timeline-dots-wrap {
  height: 60px;
}
/* ... */

